# Bac-Detector

./: .gitignore  LICENSE  README.md  my-config.yaml  pyproject.toml
.github/workflows/: ci.yml
bac_detector/: __init__.py
bac_detector/analyzers/: __init__.py  baseline.py  matrix.py
bac_detector/auth/: __init__.py  profiles.py
bac_detector/cli/: __init__.py  main.py
bac_detector/comparators/: __init__.py  response.py
bac_detector/config/: __init__.py  loader.py
bac_detector/detectors/: __init__.py  confidence.py  escalation.py  idor.py  runner.py
bac_detector/discovery/: __init__.py  endpoint_list.py  inventory.py  openapi_parser.py  runner.py
bac_detector/graph/: __init__.py  analyzers.py  builder.py  inference.py  models.py  service.py
bac_detector/models/: __init__.py  endpoint.py  finding.py  identity.py  response_meta.py  scan_result.py
bac_detector/replay/: __init__.py  builder.py  executor.py  runner.py
bac_detector/reporters/: __init__.py  json_reporter.py  markdown_reporter.py  terminal.py  writer.py
bac_detector/utils/: __init__.py  http.py  logging.py  normalization.py
crapi-results/: findings.json  report.md
demo_app/: __init__.py  app.py  data.py
example/: config.yaml  crapi-config.yaml  crapi-endpoints.txt  endpoints.txt  identities.yaml
tests/integration/: conftest.py  test_demo_scan.py  test_graph_integration.py
tests/unit/: test_auth.py  test_comparators.py  test_config.py  test_detectors.py  test_endpoint_list.py  test_graph_g1.py  test_graph_g2.py  test_graph_g3.py  test_graph_g4.py  test_inventory.py  test_matrix.py  test_models.py  test_normalization.py  test_openapi_parser.py  test_replay_builder.py  test_replay_executor.py  test_reporters.py
